Line Break issue in mainbar on Small Screens when focused.

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -10224,8 +10224,8 @@ footer {
   }
   .il-mainbar-triggers .btn-bulky .icon.small,
   .il-mainbar-triggers .il-link.link-bulky .icon.small {
-    height: 17px;
-    width: 17px;
+    height: 15px;
+    width: 15px;
   }
   .il-mainbar-tools-entries.engaged {
     height: 50px;
